<resources>
    <string name="app_name">ControlHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="back">Back</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="products">Products</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav_menu">Home</string>
    <string name="profile_nav_menu">Profile</string>
    <string name="list_nav_menu">Lists</string>
    <string name="reports_nav_menu">Reports</string>
    <string name="messages_nav_menu">Messages</string>
    <string name="settings_nav_menu">Settings</string>
    <string name="account">Account</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="next">Next</string>


    <!-- Login strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="sing_in">Sing in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_administrator">Register as administrator</string>
    <string name="register_by_qr">Register by QR</string>
    <string name="register">Register</string>
    <string name="register_by_code">Register by code</string>
    <string name="help">Help</string>
    <string name="remember_me">Remember me</string>
    <string name="register_company">Register company</string>


    <string name="name">Name</string>
    <string name="first_last_name">First last name</string>
    <string name="second_last_name">Second last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="required">Required</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="email_is_not_correct">Email is not correct</string>
    <string name="error">Error</string>
    <string name="message_error_register">An error occurred authenticating the user</string>
    <string name="register_successful">Register successful</string>
    <string name="caracters_password">The password must have more than 6 characters</string>
    <string name="login_failed">Login failed, please check your email and password.</string>
    <string name="company_address">Company address</string>
    <string name="company_name">Company Name</string>
    <string name="company_phone">Company phone</string>
    <string name="company_email">Company email</string>
    <string name="business_sector">Business sector</string>
    <string name="registration_process">Registration process</string>
    <string name="name_company_exist">There is already a company with that name</string>
    <string name="load_image">Load image</string>


    <!-- Home Strings -->
    <string name="last_list">Last list</string>
    <string name="last_messages">Last message</string>
    <string name="last_communication">Last communication</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- Product Strings -->
    <string name="product_name">Product name</string>
    <string name="product_family">Family</string>
    <string name="product_price">Price</string>
    <string name="product_add">Add product</string>
    <string name="delete_product">Delete product</string>
    <string name="product_empty">Empty product data</string>
    <string name="product_exist">Product already exists</string>
    <string name="edit_product">Edit</string>

    <string-array name="format">
        <item>€/Kg</item>
        <item>€/Unit</item>
    </string-array>

    <!-- List Strings -->
    <string name="add_list">Add new list</string>
    <string name="use_template">Use template</string>
    <string name="select_products">Select the products</string>
    <string name="accept_list" >Accept list</string>


</resources>