<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group  android:id="@+id/primary" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_List"
            android:icon="@drawable/ic_list"
            android:title="@string/list_nav_menu" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports_nav_menu" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/messages_nav_menu" />
    </group>

    <group android:id="@+id/secundary" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile_nav_menu" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_nav_menu" />
    </group>

</menu>