<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginHomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/load_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80222121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iVLogo"
        android:layout_width="149dp"
        android:layout_height="144dp"
        android:layout_marginTop="126dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/ic_ch_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eT_Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_ErrorLogin"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eT_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/eT_Email"
        app:layout_constraintStart_toStartOf="@+id/eT_Email"
        app:layout_constraintTop_toBottomOf="@+id/eT_Email"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tV_ForgotP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/eT_Password"
        app:layout_constraintTop_toBottomOf="@+id/eT_Password" />

    <Button
        android:id="@+id/buttonSingIn"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/sing_in"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_ForgotP" />

    <CheckBox
        android:id="@+id/cB_RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toTopOf="@+id/buttonSingIn"
        app:layout_constraintStart_toStartOf="@+id/eT_Password"
        app:layout_constraintTop_toBottomOf="@+id/eT_Password" />

    <TextView
        android:id="@+id/tV_ErrorLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_failed"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/eT_Email"
        app:layout_constraintEnd_toEndOf="@+id/eT_Email"
        app:layout_constraintStart_toStartOf="@+id/eT_Email"
        app:layout_constraintTop_toBottomOf="@+id/iVLogo" />

    <Button
        android:id="@+id/bt_Registrer"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        android:textColor="#FAF9F9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSingIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSingIn" />


</androidx.constraintlayout.widget.ConstraintLayout>