<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.product.ProductFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <Button
            android:id="@+id/bt_Remove"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_product"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/bt_add"
            app:layout_constraintStart_toStartOf="@+id/et_productPrice"
            app:layout_constraintTop_toTopOf="@+id/bt_add" />

        <Button
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_add"
            app:layout_constraintEnd_toEndOf="@+id/et_productFamily"
            app:layout_constraintStart_toEndOf="@+id/et_productPrice"
            app:layout_constraintTop_toBottomOf="@+id/et_productPrice" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_productName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/product_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_business">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_productFamily"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/product_family"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/et_productName"
            app:layout_constraintStart_toStartOf="@+id/et_productName"
            app:layout_constraintTop_toBottomOf="@+id/et_productName"
            app:startIconDrawable="@drawable/ic_business">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_productPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="197dp"
            android:layout_height="79dp"
            android:hint="@string/product_price"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="@+id/et_productFamily"
            app:layout_constraintTop_toBottomOf="@+id/et_productFamily"
            app:startIconDrawable="@drawable/ic_business">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_add"
            app:layout_constraintEnd_toEndOf="@+id/et_productFamily"
            app:layout_constraintStart_toEndOf="@+id/et_productPrice"
            app:layout_constraintTop_toTopOf="@+id/et_productPrice"
            app:layout_constraintVertical_bias="0.347"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="textStart" />

</LinearLayout>
